Fix most feedback on control_comparison.tex

--- a/introduction.tex
+++ b/introduction.tex
@@ -3,6 +3,7 @@
 \begin{document}
 \listoftodos
 
+\todo[inline]{Run all experiments with $10,000$ simulations?}
 \section{Introduction}
 The process of pricing products in order to control demand and
 maximize revenues has been undertaken for centuries. In recent
