--- a/control_comparison.tex
+++ b/control_comparison.tex
@@ -15,7 +15,9 @@ The modelling of a real system and decision process can become very
 complicated, and  we must  create a very
 large state space in order to make use of the Bellman equation.
 We often have to take into account unobservable
-state variables, like estimated parameters, and constraints that may
+state variables, like estimated parameters, and constraints\todo{Jeff:
+you haven't mentioned constraints before}
+that may
 depend on history. Decision-makers in business may change their mind
 about the objective over the course of the decision period, which should
 be incorporated in the modelling as parameters with corresponding, estimated
@@ -27,21 +29,21 @@ Finally, the dimensions of the state, policy and exogenous
 information spaces can quickly make a numerical solution to the Bellman
 equation intractable. An explosion of dimensions can happen very
 quickly, even for one-product problems. In
-\citep{bertsimas2001dynamic}, the authors model a simple
+\citet{bertsimas2001dynamic}, the authors model a simple
 one-product demand function with uncertainty in the function
 parameters, and present an eight-dimensional dynamic programming
 solution to the problem.
-Much of the focus in the research community has therefore been in
+Much of the focus in the research community has therefore been on
 developing tractable algorithms with comparable performance to the
 optimal policies, see for example
-\citep{powell2011approximate,bertsekas2012dynamic}.
+\citet{powell2011approximate,bertsekas2012dynamic}.
 
 An advantage of creating explicit policy functions at the start of the decision
-process, is the speed at which we can update our decisions in the
+process, is the speed at which we can make our decisions in the
 future. In the classic pricing problems, the dynamics of the
 underlying system do not require instant pricing decisions. Thus,
-suboptimal decision rules that are created on-line are often used
-instead \citep{talluri2006theory}. Estimation of the system and optimisation of prices are
+suboptimal decision rules that are created on-line, i.e.~as they are needed, are often used
+instead (\citet{talluri2006theory}). Estimation of the system and optimisation of prices are
 normally separated, and constraints are more easily updated at each
 decision point.
 
@@ -51,32 +53,35 @@ Whenever a decision must be made, these methods simulate the future
 behaviour of the system and optimise the current decision based on
 these simulations. First, we consider a special case called the
 \emph{Certainty Equivalent Control} policy, which uses a point
-estimate of the system \citep[Ch.~6]{bertsekas2005dynamic}. For the
-example system in this paper, it turns out that we can solve
-this approximation analytically.
+estimate of the system (\citet[Ch.~6]{bertsekas2005dynamic}). For the
+example system in this article, it turns out that we can solve
+this approximate problem analytically.
 Then, we investigate lookahead policies that take into account the
-variability of the future trajectories, which produce
+variability of the future system trajectories, which produce
 results that are more similar to the optimal Bellman policy.
 Numerical comparison experiments between the different policies are
 made using the example pricing problem introduced in
 \Cref{sec:bellman_example_markdown}.
 
 \subsection{The Certainty Equivalent Control policy}
-A popular, tractable algorithm for solving stochastic optimal control
-problems is the Certainty Equivalent Control (CEC) policy, also known as Model
+A popular, tractable, algorithm for solving stochastic optimal control
+problems is the Certainty Equivalent Control (CEC) policy, as it is
+named in \citet{bertsekas2005dynamic}.
+It also known as (deterministic) Model
 Predictive Control in the engineering community.
 The algorithm is particularly practical, because the optimisation
-problem is reduced to a classic deterministic problem that can
+problem is reduced to a standard deterministic problem that can
 be solved with existing, commercial or open-source solvers which
 handle very large systems.
-At each decision point, a deterministic optimization problem for the
-remaining decision horizon is solved. Only the current decision is
-implemented, whilst the subsequent decisions are discarded.
-For each decision point $t=0,\dots,T-1$, the CEC algorithm for the pricing
+At each decision time, a deterministic optimization problem for the
+remaining decision horizon is solved. Only the decision for the
+current time step is
+used, whilst the subsequent decisions are discarded.
+For each decision time $t=0,\dots,T-1$, the CEC algorithm for the pricing
 problem calculates the current price using the following steps:
 \begin{enumerate}
 \item Observe state $\hat s$.
-\item Create a point estimate $w_{t+1},\dots,w_T$ of ${(W)}_{t+1}^T$.
+\item Take a best estimate $w_{t+1},\dots,w_T$ of ${(W_\tau)}_{t+1}^T$.
 \item Solve the optimization problem
   \begin{equation}
     \max_{\mathbf a\in A^{T-t}}\left\{\sum_{\tau=t}^{T-1}\mathbf
@@ -84,34 +89,34 @@ problem calculates the current price using the following steps:
       a_\tau,w_{\tau})-CS_T^{\mathbf a}\right\},
     \quad \text{s.t.}\quad S_t^{\mathbf a}=\hat s.
   \end{equation}
-\item Implement the price corresponding to the maximizer $\mathbf
-  a_t\in A$ above.
+\item Set the price corresponding to a maximizer
+  $\mathbf a_t\in A$ above.
 \end{enumerate}
 
 For the one-product pricing problem, we can simplify the optimization
-problem and in some cases get analytical solutions for the policy function.
-First, let us consider the point forecast
-$W\equiv 1$.
+problem and in some cases obtain analytical solutions for the policy function.
+First, let us consider the estimate $W_\tau=1$ for $\tau=t+1,\dots T$.
 Then we can rewrite the maximisation problem to find
 the certainty equivalent value function,
 \begin{equation}
   \widetilde{v}(t,s)=
   \max_{\mathbf a\in A^{T-t}}\left\{\sum_{\tau=t}^{T-1}(\mathbf
-    a_\tau+C)\min\left(q(\mathbf a_\tau),s-\sum_{r=t}^{\tau-1}q(\mathbf a_r)\right)-Cs\right\}.
+    a_\tau+C)\min\left(s-\sum_{r=t}^{\tau-1}q(\mathbf a_r),q(\mathbf a_\tau)\right)-Cs\right\}.
   % \quad \text{s.t.}\quad \sum_{\tau=t}^{T-1}q(\mathbf a_t)\leq s.
 \end{equation}
 The optimal choice here is to let $\mathbf a_\tau=a^*\in A$ for each
-$\tau$, such that the same amount of stock is sold in each period.
+$\tau$, such that the same amount of stock is forecast to be sold in
+each period.
 Then, $a^*=a^C(t,s)$ is given by the policy function
 \begin{equation}
   a^C(t,s)=\argmax_{a\in A} \left\{(a+C)\min\left(
-      q(a),\frac{s}{T-t}
-    \right)\right\}
+      \frac{s}{T-t},q(a)
+    \right)\right\}.
   % ,\quad\text{s.t.}\quad q(a)\leq \frac{s}{T-t}.
 \end{equation}
-Let $\mathcal P_A$ be the projection operator onto the interval $A$.
+Let $\mathcal P_A$ be the projection operator from $\mathbb R$ onto the interval $A$.
 Let us consider two families of demand functions that are
-popular in the literature, see e.g.~\citep[Ch.~7]{talluri2006theory}.
+popular in the literature, see e.g.~\citet[Ch.~7]{talluri2006theory}.
 If $q$ is of the form $a\mapsto q_1-q_2a$, with $q_1,q_2> 0$, then
 the optimal policy $\alpha_t=a^C(t,S_t^\alpha)$ for the deterministic
 problem is given by the function
@@ -126,10 +131,12 @@ In the case when $q(a)=q_1e^{-q_2a}$, the policy function is
     \max\left( \frac{1}{q_2}\log\left( \frac{q_1(T-t)}{s}\right),
       \frac{1}{q_2}-C  \right)\right].
 \end{equation}
-The numerical experiments in the paper are all made
-with $q(a)=q_1e^{-q_2a}$, and for a single combination of the other system
+The numerical experiments in the article are all made
+with a demand function of the family $q(a)=q_1e^{-q_2a}$,  for a
+single combination of the  system
 parameters. We refer to \Cref{sec:parameter_comparison} for a
-comparison between $a^B$ and $a^C$ for a larger range of parameters.
+comparison between the Bellman policy and CEC functions for a larger
+range of parameters.
 
 \todo[inline]{Can we get error bounds comparing $\widetilde{v}$ and
   $v$? Maybe using ideas from \citet{bertsekas2005survey}
@@ -156,42 +163,69 @@ comparison between $a^B$ and $a^C$ for a larger range of parameters.
 The example system in \Cref{sec:bellman_example_markdown} has a demand
 function of the form $q(a)=q_1e^{-q_2a}$, where $q_1=e^2/3$ and
 $q_2=3$. We can therefore compare the optimal Bellman policy with the
-pricing policy that a CEC algorithm would implement.
+pricing policy that a CEC algorithm would create.
 Denote the Bellman policy function by $a^B$, and consider
 $a^B(t,s)-a^C(t,s)$ for each $t=0,\dots,T-1$. The plot in
 \Cref{fig:bellman_det_policy_difference} shows this difference.
 Both of the policy functions reach the upper bound in $A$ for small values
 of $s$, but in general the Bellman policy is pricing the products
-lower than the CEC policy would do.
-\begin{figure}[htbp]
+lower than the CEC policy.
+\begin{figure}[p]
   \centering
   \begin{tikzpicture}
     \begin{axis}[
       xlabel={$s$},
-      ylabel={$a^B(t,s)-a^C(t,s)$},
-      title={Policy function difference},
+      ylabel={Function value},
+      title={Policy functions},
       legend cell align=left,
       ]
-      \addplot+[mark=none] table[x index = 0,y expr=\thisrowno{5}-\thisrowno{8},col sep=comma]
+      \addplot[mark=none] table[x index = 0,y expr={\thisrowno{5}},col sep=comma]
+      {./data/markdown_bellman_det_val_policy.csv};
+      \addlegendentry{$a^B(t,s)$};
+      \addplot[mark=none,dashed] table[x index = 0,y expr={\thisrowno{8}},col sep=comma]
+      {./data/markdown_bellman_det_val_policy.csv};
+      \addlegendentry{$a^C(t,s)$};
+      \addplot[mark=none] table[x index = 0,y expr={\thisrowno{6}},col sep=comma]
+      {./data/markdown_bellman_det_val_policy.csv};
+      \addplot[mark=none,dashed] table[x index = 0,y expr={\thisrowno{9}},col sep=comma]
+      {./data/markdown_bellman_det_val_policy.csv};
+      \addplot[mark=none] table[x index = 0,y expr={\thisrowno{7}},col sep=comma]
+      {./data/markdown_bellman_det_val_policy.csv};
+      \addplot[mark=none,dashed] table[x index = 0,y expr={\thisrowno{10}},col sep=comma]
+      {./data/markdown_bellman_det_val_policy.csv};
+      \draw (axis cs:0.45,0.55) node[anchor=north east] {$t=2$};
+      \draw (axis cs:0.72,0.65) node[anchor=north east] {$t=1$};
+      \draw (axis cs:0.75,0.75) node[anchor=south west] {$t=0$};
+    \end{axis}
+  \end{tikzpicture}
+
+  \vspace{1em}
+  \begin{tikzpicture}
+    \begin{axis}[
+      xlabel={$s$},
+      ylabel={$\frac{a^B(t,s)-a^C(t,s)}{a^B(t,s)}$},
+      title={\hspace{1em}Relative function difference},
+      legend cell align=left,
+      ]
+      \addplot+[mark=none] table[x index = 0,y expr={1-\thisrowno{8}/\thisrowno{5}},col sep=comma]
       {./data/markdown_bellman_det_val_policy.csv};
       \addlegendentry{$t=0$};
-      \addplot+[mark=none] table[x index = 0,y expr=\thisrowno{6}-\thisrowno{9},col sep=comma]
+      \addplot+[mark=none] table[x index = 0,y expr={1-\thisrowno{9}/\thisrowno{6}},col sep=comma]
       {./data/markdown_bellman_det_val_policy.csv};
       \addlegendentry{$t=1$};
-      \addplot+[mark=none] table[x index = 0,y expr=\thisrowno{7}-\thisrowno{10},col sep=comma]
+      \addplot+[mark=none] table[x index = 0,y expr={1-\thisrowno{10}/\thisrowno{7}},col sep=comma]
       {./data/markdown_bellman_det_val_policy.csv};
       \addlegendentry{$t=2$};
     \end{axis}
   \end{tikzpicture}
-  \caption{Comparison of the CEC policy function $a^C$ and
-    the optimal Bellman policy function $a^B$, see also
-    \Cref{fig:markdown_bellman}.
+  \caption{Comparison of the CEC and Bellman policy functions $a^C$ and
+    $a^B$.
     The CEC function sets
     higher prices than the Bellman function for large $s$.
-    Observe that when $t<T-1$, there is a small region where
+    Observe the spike in the difference plot, which happens when $t<T-1$, and
     $a^B(t,s)\geq a^C(t,s)$, before they
     both reach the boundary price $a_{max}=1$. This is due to the
-    diffusion of the value function by the
+    diffusion of the value function caused by the
     random variables $W_t$.
   }\label{fig:bellman_det_policy_difference}
 \end{figure}
@@ -207,26 +241,56 @@ $P^\alpha =
 From the opitimality of the Bellman policy function, we should have
 that $\mathbb E_W[P^{\alpha^B}]\geq \mathbb E_W[P^{\alpha^C}]$.
 However, marginalising a random variable with the expectation operator
-loses a lot of information which can be of value.
-An approximation of the distribution of
-$P^{\alpha^B}-P^{\alpha^C}$ based on 1000 realisations of the
-underlying $W$ can be seen in \Cref{fig:bellman_det_vals}.
+loses a lot of information which can be of interest.
+An approximation of the distributions of $P^{\alpha^B}, P^{\alpha^C}$
+and their difference
+$P^{\alpha^B}-P^{\alpha^C}$, based on $1000$ realisations of the
+underlying $W$, can be seen in \Cref{fig:bellman_det_vals}.
 Indeed in the experiment, the average value of following the
 Bellman policy is higher than following the CEC policy.
-However, from the histogram we see that
+However, from the bottom figure we see that
 in more than half of the cases, the CEC policy outperforms the optimal
-policy $\alpha^B$.
-\begin{figure}[htbp]
+policy $\alpha^B$. What we can take from this experiment is that
+the CEC policy induces a more risk-seeking pricing strategy than
+$\alpha^B$: It results in slightly larger profits for a majority of the
+realisations of $W$, but at a cost of taking a more significant hit on
+profits in the remaining realisations.
+\begin{figure}[p]
   \centering
+  \begin{tikzpicture}[scale=0.8]
+    \begin{axis}[
+      xlabel=$P^{\alpha^B}$,
+      ylabel=Count,
+      title={Simulations of Bellman policy},
+      xmin=0.57, xmax=0.69,
+      ymax=180,
+      ]
+      \addplot[blue,hist={bins=30}] table [y index = 0,col sep=comma]
+      {./data/markdown_bellman_det_vals.csv};
+    \end{axis}
+  \end{tikzpicture}%
+  \begin{tikzpicture}[scale=0.8]
+    \begin{axis}[
+      xlabel=$P^{\alpha^C}$,
+      title={Simulations of CEC policy},
+      xmin=0.57, xmax=0.69,
+      ymax=180,
+      ]
+      \addplot[blue,hist={bins=30}] table [y index = 1,col sep=comma]
+      {./data/markdown_bellman_det_vals.csv};
+      \draw[<-] (axis cs:0.62,30) --
+      (axis cs:0.605,60) node[anchor=south] {Fatter lower tail};
+    \end{axis}
+  \end{tikzpicture}
+
+  \vspace{1em}
   \begin{tikzpicture}
     \begin{axis}[
       xlabel=$P^{\alpha^B}-P^{\alpha^C}$,
       ylabel=Count,
       title={Simulations of Bellman and CEC policies},
       ]
-      % \addplot[blue,hist={bins=30}] table [y expr =
-      % {(\thisrowno{0}-\thisrowno{1})/\thisrowno{0}},col sep=comma]
-      \addplot[blue,hist={bins=30}] table [y expr = {(\thisrowno{0}-\thisrowno{1})},col sep=comma]
+      \addplot[red,hist={bins=30}] table [y expr = {(\thisrowno{0}-\thisrowno{1})},col sep=comma]
       {./data/markdown_bellman_det_vals.csv};
       \draw[dashed] (axis cs:0,-30) -- (axis cs:0,600);
       \draw[<-] (axis cs:0.017,100) -- (axis cs:0.015,200)
@@ -236,11 +300,11 @@ policy $\alpha^B$.
   \end{tikzpicture}
   \todo[inline]{Show relative difference
     $(P^{\alpha^B}-P^{\alpha^C})/P^{\alpha^B}$ instead?}
-  \caption{This shows the distribution from 1000 samples of
-    the profit of following the Bellman and CEC policies.
-    The mean $\mathbb E_W[P^{\alpha^B}-P^{\alpha^C}]\approx 3.8\times
-    10^{-3}$ confirms that Bellman is better on average, as it should be.
-    Importantly, in more than half the samples the suboptimal policy
+  \caption{This shows the distributions from $1000$ samples of
+    the profits of following the Bellman and CEC policies.
+    The sample mean $\mathbb E_W[P^{\alpha^B}-P^{\alpha^C}]\approx 3.8\times
+    10^{-3}$, confirms that Bellman is better on average, as it should be.
+    Importantly, however, in more than half the samples the suboptimal policy
     outperforms the Bellman policy.
   }\label{fig:bellman_det_vals}
 \end{figure}
@@ -248,7 +312,7 @@ policy $\alpha^B$.
 \subsection{Lookahead policies}
 The Certainty Equivalent Control policy is a special case of
 a set of rolling horizon, or lookahead policies, as defined in
-\citep[Ch.~6]{powell2011approximate}.
+\citet[Ch.~6]{powell2011approximate}.
 In a general setting, these methods
 calculate (sub-)optimal policies over a given control
 horizon whilst forecasting the system behaviour over a given
@@ -258,7 +322,7 @@ end of the control horizon, the process is repeated.
 
 For the current work, all decisions are made on-line. This means
 that the rolling horizon process is carried out at each time step, and
-only the decision calculated for that time-step will be implemented to
+only the decision calculated for that time-step will be used in
 the system. The control and prediction horizons will both be equal to
 the remaining time of the control problem, so at each time $t$, the
 control horizon will be $t,\dots,T-1$ and the prediction horizon
@@ -276,26 +340,27 @@ Thus, at time $t$, the pricing algorithm is as follows:
 \item Pick or draw $N_t$ samples $W^{(i)}$, $i=1,\dots,N_t$ from the
   underlying probability space.
 \item Solve the optimization problem
-  \begin{dmath}
+  \begin{align}\nonumber
     \max_{\substack{a_0\in A\\a_{t+1:T-1}^{(i)}\in A^{T-{t+1}}}}
-    \frac{1}{N_t}\sum_{i=1}^{N_t}\left[
-      a_0Q(\hat s,a_0,W_{t+1}^{(i)})
-      +\sum_{\tau=t+1}^{T-1}a_s^{(i)}Q(S_\tau^{(i)},a_\tau^{(i)},W_{\tau+1}^{(i)})
+    \frac{1}{N_t}\sum_{i=1}^{N_t}&\left[
+    a_0Q(\hat s,a_0,W_{t+1}^{(i)})
+    \phantom{+\sum_{\tau=t+1}^{T-1}}\right.\\
+      &\left.+\sum_{\tau=t+1}^{T-1}a_s^{(i)}Q(S_\tau^{(i)},a_\tau^{(i)},W_{\tau+1}^{(i)})
       -C S_T^{(i)}\right].
-  \end{dmath}
+  \end{align}
   \begin{itemize}
   \item $S^{(i)}$ corresponds to the
-    controlled process in scenario $i$, starting at $S_t^{(i)}=\hat s$.
+    controlled process in realisation $i$, starting at $S_t^{(i)}=\hat s$.
   \end{itemize}
-\item Implement the controller corresponding to the maximiser $a_0\in
+\item Use the controller corresponding to a maximiser $a_0\in
   A$ above.
 \end{enumerate}
-\textbf{Remark:} The decision variables $a_{t+1:T-1}^{(i)}$ are meant to
+\textbf{Remarks:} (i)~The decision variables $a_{t+1:T-1}^{(i)}$ are meant to
 approximate the values the optimal policy $\alpha^B$ would have taken
-if $W^{(i)}$ is drawn from the underlying probability space.
-
-Note that if $N_t=1$, then this lookahead policy is the same as the CEC policy.
-The number of decision variables increases linearly with $N_t$, and
+if outcome $W^{(i)}$ was drawn from all possible outcomes.
+(ii)~If $N_t=1$, then this lookahead policy is the same as the
+CEC policy, and the uncertainty in the system is ignored.
+(iii)~The number of decision variables increases linearly with $N_t$, and
 so does the cost of calculating the objective.
 
 \subsubsection{Example system}
@@ -307,7 +372,7 @@ policy. We draw the same number of samples $N_t=N$ from $W$ for each
 decision time $t$. Denote the resulting policy process
 by $\alpha^{L_N}$. Numerical results comparing $P^{\alpha^{L_N}}$ with the
 Bellman policy are shown in \Cref{fig:markdown_bellman_mpc_5_20_100}
-for $N=5,20,100$. The simulations are run 1000 times each to get
+for $N=5,20,100$. The simulations are run $1000$ times each to get
 approximate distributions for the $P^\alpha$s.
 As $N$ increases, the behaviour of the lookahead policies become more
 similar to the Bellman policy, and as a result the spread of differences in the
@@ -364,11 +429,11 @@ profits $P^\alpha$ decreases.
   \end{subfigure}
   \caption{We look at the difference in realised profit when using a Bellman policy and a
     lookahead policy with $N$ future scenarios.
-    The histograms show the results from 1000 individual
+    The histograms show the results from $1000$ individual
     simulations of the system.
     As $N$ increases, the differences between the lookahead policy and
     the optimal Bellman policy decreases. For each $N$, the Bellman
-    policy achieves a higher mean outcome over the 1000 simulations.
+    policy achieves a higher mean outcome over the $1000$ simulations.
   }\label{fig:markdown_bellman_mpc_5_20_100}
 \end{figure}
 
