Fix model uncertainty feedback

--- a/main.tex
+++ b/main.tex
@@ -36,7 +36,7 @@
     company.\\
     The author would like to thank his supervisors
     J.~N.~Dewynne and C.~L.~Farmer for their valuable suggestions.}\\
-  {\tt riseth@maths.ox.ac.uk}}
+  \texttt{riseth@maths.ox.ac.uk}}
 \affil{Mathematical Institute, University
   of Oxford, OX2 6GG.}
 
@@ -52,7 +52,7 @@
 \subfile{abstract}
 
 \vspace{1em}\noindent
-{\bf Key words:} Revenue management, dynamic pricing, stochastic
+\textbf{Key words:} Revenue management, dynamic pricing, stochastic
 optimal control,
 approximate dynamic programming
 
