Fix feedback for appendix, round 2

--- a/appendix_policydiff.tex
+++ b/appendix_policydiff.tex
@@ -6,8 +6,8 @@
 
 \section*{Appendix: Bellman and CEC parameter comparisons}\label{sec:parameter_comparison}
 This article contains many numerical experiments on a system
-with a fixed combination of the five parameters
-termination time $T$, unsold items cost $C$, uncertainty $\gamma$, and
+with a fixed combination of the five parameters:
+Termination time $T$, unsold items cost $C$, uncertainty $\gamma$, and
 demand function parameters $q_1,q_2$.
 In this section we explore the differences between the Bellman policy
 and the CEC policy for a larger parameter range.
@@ -54,7 +54,7 @@ are $C=1,\gamma=0.05,q_1=e^2/3\approx2.5,q_2=3$. This point lies
 in the region where the $L^2$ difference is around $0.012$ --- see the
 white dot in the
 bottom, left subfigure in \Cref{fig:policy_diff_heatmaps}.
-This difference is in the lower range of what we see for all the
+This difference is in the lower range of that seen for all the
 combinations of parameters, so the conclusions made in the article
 should be considered as relevant for a wider range of systems.
 
