Add lookahead policies data file

--- a/main.tex
+++ b/main.tex
@@ -54,7 +54,7 @@
 \vspace{1em}\noindent
 \textbf{Key words:} Revenue management, dynamic pricing, stochastic
 optimal control,
-approximate dynamic programming
+approximate dynamic programming.
 
 \subfile{introduction}
 \subfile{bellman_control}
