--- a/introduction.tex
+++ b/introduction.tex
@@ -15,12 +15,12 @@ the introduction of yield management software had, over the preceding
 three years, contributed \$500 million of additional revenue per year,
 and would continue to do so in the future (\citet{smith1992yield}).
 In an example from Chilean retail, \citet{bitran1998coordinating}
-report an expected improvement of 7\%-16\% by implementing
+report an expected revenue improvement of 7\%-16\% from implementing
 model-driven strategies.
 For retailers with billions of pounds in revenues, small
 improvements to their revenue-management processes can be worth millions
 of pounds.
-Unsold items add up to thousands of tonnes of waste per year, so
+In addition, unsold items add up to thousands of tonnes of waste per year, so
 improving the control of demand for products is advantageous
 for both retailers and the environment.
 
@@ -75,7 +75,7 @@ one. We find that for our example, this is  true more than half of
 the time.
 In \Cref{sec:markdown_miss_specification} we consider the issue of
 model uncertainty, for the case where the description of the random system
-disturbance is incorrect. The experiments in that section suggests
+disturbance is incorrect. The experiments in that section suggest
 that the suboptimal policies are less robust to model uncertainty
 than the optimal policy. Hence, the reduction in the cost
 of calculating the optimal policies must partially be paid for
