--- a/main.tex
+++ b/main.tex
@@ -36,7 +36,7 @@
     company.\\
     The author would like to thank his supervisors
     J.~N.~Dewynne and C.~L.~Farmer for their valuable suggestions.}\\
-  \texttt{riseth@maths.ox.ac.uk}}
+  {\footnotesize\texttt{riseth@maths.ox.ac.uk}}}
 \affil{Mathematical Institute, University
   of Oxford, OX2 6GG.}
 
