--- a/model_uncertainty.tex
+++ b/model_uncertainty.tex
@@ -21,15 +21,16 @@
   misspecification}\label{sec:markdown_miss_specification}
 It is difficult to correctly model the true underlying disturbance
 $W^\dagger$, and the performance of the policy function should be
-tested for different types of model misspecification.
+tested for different types of model misspecifications.
 Say the policy functions are calculated based on
 system disturbances $W_t\sim \frac{1}{2}+\mathrm{Beta}(\mu,\mu)$, where
-$\mu$ is chosen such that $\mathbb E[W]=1$ and $\mbox{std}[W]=\gamma$.
+$\mu$ is chosen so that $\mathbb E[W]=1$ and $\mbox{std}[W]=\gamma$.
 We first consider two cases where the true disturbance is
 different from $W$:
 \begin{enumerate}
-\item Mean misspecification, $W^\dagger = W-0.05$, $\gamma^\dagger=\gamma$.
-\item Standard deviation misspecification, $\gamma^\dagger = 2\gamma$,
+\item Mean misspecification, $W^\dagger = W-0.05$,
+  $\mbox{std}[W^\dagger]=\gamma$.
+\item Standard deviation misspecification, $\mbox{std}[W^\dagger] = 2\gamma$,
   $\mathbb E[W^\dagger] = \mathbb E[W]$.
 \end{enumerate}
 We simulate the system for both of these cases $1000$ times each,
@@ -45,7 +46,8 @@ update parameter estimates more frequently.
 \begin{figure}[p]
   \centering
   \begin{subfigure}[b]{0.5\textwidth}
-    \begin{tikzpicture}[trim axis left,scale=0.95]
+    \centering
+    \begin{tikzpicture}[scale=0.95]
       \begin{axis}[
         width=\textwidth,
         legend pos=north west,
@@ -63,6 +65,7 @@ update parameter estimates more frequently.
     \end{tikzpicture}
   \end{subfigure}\hfill
   \begin{subfigure}[b]{0.5\textwidth}
+    \centering
     \begin{tikzpicture}[scale=0.95]
       \begin{axis}[
         width=\textwidth,
@@ -80,7 +83,8 @@ update parameter estimates more frequently.
     \end{tikzpicture}
   \end{subfigure}\\[0.5em]
   \begin{subfigure}[b]{0.5\textwidth}
-    \begin{tikzpicture}[trim axis left,scale=0.95]
+    \centering
+    \begin{tikzpicture}[scale=0.95]
       \begin{axis}[
         width=\textwidth,
         legend pos=north west,
@@ -97,6 +101,7 @@ update parameter estimates more frequently.
     \end{tikzpicture}
   \end{subfigure}\hfill
   \begin{subfigure}[b]{0.5\textwidth}
+    \centering
     \begin{tikzpicture}[scale=0.95]
       \begin{axis}[
         width=\textwidth,
@@ -113,7 +118,8 @@ update parameter estimates more frequently.
     \end{tikzpicture}
   \end{subfigure}\\[0.5em]
   \begin{subfigure}[b]{0.5\textwidth}
-    \begin{tikzpicture}[trim axis left,scale=0.95]
+    \centering
+    \begin{tikzpicture}[scale=0.95]
       \begin{axis}[
         width=\textwidth,
         % legend style={at={(0.5,0.97)}, anchor=north},
@@ -131,6 +137,7 @@ update parameter estimates more frequently.
     \end{tikzpicture}
   \end{subfigure}\hfill
   \begin{subfigure}[b]{0.5\textwidth}
+    \centering
     \begin{tikzpicture}[scale=0.95]
       \begin{axis}[
         width=\textwidth,
@@ -171,6 +178,7 @@ functions can be seen in \Cref{fig:chisq_transformed}.
 \begin{figure}[htbp]
   \centering
   \begin{subfigure}[b]{0.5\textwidth}
+    \centering
     \begin{tikzpicture}
       \begin{axis}[
         width=\textwidth,
@@ -189,6 +197,7 @@ functions can be seen in \Cref{fig:chisq_transformed}.
     \end{tikzpicture}
   \end{subfigure}%
   \begin{subfigure}[b]{0.5\textwidth}
+    \centering
     \begin{tikzpicture}
       \begin{axis}[
         width=\textwidth,
@@ -217,14 +226,15 @@ the one with a negative skew by $W_2^\dagger$.
 We again simulate the system with the Bellman and CEC policies $1000$
 times, and compare the outomes. The results are shown in
 \Cref{fig:markdown_bellman_mpc_chi2}. We see that in the two cases considered,
-the relative performance of the CEC controller does not change much
+the performance of the CEC controller does not change much
 compared to the case where the assumed uncertainty $W$ is the same as
 the true uncertainty $W^\dagger$.
 
 \begin{figure}[htbp]
   \centering
   \begin{subfigure}[b]{0.5\textwidth}
-    \begin{tikzpicture}[trim axis left]
+    \centering
+    \begin{tikzpicture}[scale=0.9]
       \begin{axis}[
         width=\textwidth,
         legend pos=north west,
@@ -242,7 +252,8 @@ the true uncertainty $W^\dagger$.
     \end{tikzpicture}
   \end{subfigure}\hfill
   \begin{subfigure}[b]{0.5\textwidth}
-    \begin{tikzpicture}
+    \centering
+    \begin{tikzpicture}[scale=0.9]
       \begin{axis}[
         width=\textwidth,
         legend pos=north west,
@@ -257,15 +268,51 @@ the true uncertainty $W^\dagger$.
         \draw (axis cs:0.57,100) node[anchor=west] {Bellman};
       \end{axis}
     \end{tikzpicture}
-  \end{subfigure}\\[1em]
+  \end{subfigure}\\[0.5em]
   \begin{subfigure}[b]{0.5\textwidth}
-    \begin{tikzpicture}[trim axis left]
+    \centering
+    \begin{tikzpicture}[scale=0.9]
+      \begin{axis}[
+        width=\textwidth,
+        legend pos=north west,
+        xlabel=$P^{\alpha^C}$,
+        ylabel=Count,
+        xmin=0.55, xmax=0.7,
+        ymax=180,
+        ]
+        \addplot[blue,hist={bins=40}] table [y index = 6,col sep=comma]
+        {./data/markdown_bellman_cec_model_misspecification.csv};
+        \addlegendentry{$W_1^\dagger$};
+        \draw (axis cs:0.57,100) node[anchor=west] {CEC};
+      \end{axis}
+    \end{tikzpicture}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.5\textwidth}
+    \centering
+    \begin{tikzpicture}[scale=0.9]
+      \begin{axis}[
+        width=\textwidth,
+        legend pos=north west,
+        xlabel=$P^{\alpha^C}$,
+        xmin=0.55, xmax=0.7,
+        ymax=180
+        ]
+        \addplot[blue,hist={bins=40}] table [y index = 7,col sep=comma]
+        {./data/markdown_bellman_cec_model_misspecification.csv};
+        \addlegendentry{$W_2^\dagger$};
+        \draw (axis cs:0.57,100) node[anchor=west] {CEC};
+      \end{axis}
+    \end{tikzpicture}
+  \end{subfigure}\\[0.5em]
+  \begin{subfigure}[b]{0.5\textwidth}
+    \centering
+    \begin{tikzpicture}[scale=0.9]
       \begin{axis}[
         width=\textwidth,
         % legend style={at={(0.5,0.97)}, anchor=north},
         xlabel=$P^{\alpha^B}-P^{\alpha^C}$,
         ylabel=Count,
-        xmin=-0.006, xmax=0.022,
+        xmin=-0.006, xmax=0.021,
         ymax=600
         ]
         \addplot[red,hist={bins=40}] table [y expr=\thisrowno{2}-\thisrowno{6},col sep=comma]
@@ -275,12 +322,13 @@ the true uncertainty $W^\dagger$.
     \end{tikzpicture}
   \end{subfigure}\hfill
   \begin{subfigure}[b]{0.5\textwidth}
-    \begin{tikzpicture}
+    \centering
+    \begin{tikzpicture}[scale=0.9]
       \begin{axis}[
         width=\textwidth,
         % legend style={at={(0.5,0.97)}, anchor=north},
         xlabel=$P^{\alpha^B}-P^{\alpha^C}$,
-        xmin=-0.006, xmax=0.022,
+        xmin=-0.006, xmax=0.021,
         ymax=600
         ]
         \addplot[red,hist={bins=40}] table [y expr=\thisrowno{3}-\thisrowno{7},col sep=comma]
@@ -292,7 +340,7 @@ the true uncertainty $W^\dagger$.
   \caption{Performance of the Bellman  and CEC policies when the true system disturbances
     are transformations $W_1^\dagger,W_2^\dagger$ of
     a $\chi_5^2$ distribution (\Cref{fig:chisq_transformed}).
-    The relative performance of CEC compared to Bellman does not
+    The performance of CEC compared to Bellman does not
     change much,
     although we see a slight deterioration for the under-estimation of
     skewness (left) and a slight improvement when the skewness has
